--- a/weather-ui/package.json
+++ b/weather-ui/package.json
@@ -11,9 +11,12 @@
     "mdb-react-ui-kit": "^7.1.0",
     "openmeteo": "^1.1.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-usestateref": "^1.0.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
